2018-04-06  Youenn Fablet  <youenn@apple.com>

        Response headers should be filtered when sent from NetworkProcess to WebProcess
        https://bugs.webkit.org/show_bug.cgi?id=184310

        Reviewed by Ryosuke Niwa.

        Rebased tests for WK2 as Server response header is now filtered out for cross-origin and not fetch/XHR loads.

        * http/wpt/service-workers/header-filtering-worker.js: Added.
        * http/wpt/service-workers/header-filtering.https-expected.txt: Added.
        Some tests are failing as navigation loads are not yet filtered and we
        have no good way yet to detect cross origin loads.
        * http/wpt/service-workers/header-filtering.https.html: Added.
        * http/wpt/service-workers/resources/header-filtering-iframe.html: Added.
        * http/wpt/service-workers/resources/response-full-of-headers.py: Added.
        * http/tests/webarchive/cross-origin-stylesheet-crash-expected.txt: Added.
        * http/tests/webarchive/test-preload-resources-expected.txt: Added.
        * platform/mac-wk1/http/tests/webarchive/cross-origin-stylesheet-crash-expected.txt: Added.
        * platform/mac-wk1/http/tests/webarchive/test-preload-resources-expected.txt: Added.
        * platform/win/http/tests/webarchive/cross-origin-stylesheet-crash-expected.txt: Added.
        * platform/win/http/tests/webarchive/test-preload-resources-expected.txt: Added.

2018-04-06  Ryan Haddad  <ryanhaddad@apple.com>

        Mark fast/loader/submit-form-while-parsing-2.html as flaky.
        https://bugs.webkit.org/show_bug.cgi?id=184051

        Unreviewed test gardening.

        * platform/mac-wk2/TestExpectations:

2018-04-06  Ryan Haddad  <ryanhaddad@apple.com>

        Mark three wpt LayoutTests as slow on iOS
        https://bugs.webkit.org/show_bug.cgi?id=184278

        Unreviewed test gardening.

        These tests were marked as slow for macOS debug, but not for iOS.

        * platform/ios/TestExpectations:
