@@ -1,3 +1,15 @@
+2018-04-07  Youenn Fablet  <youenn@apple.com>
+
+        Response headers should be filtered when sent from NetworkProcess to WebProcess
+        https://bugs.webkit.org/show_bug.cgi?id=184310
+
+        Unreviewed.
+        Fixed bogus const declaration.
+        Improved sub test titles.
+
+        * http/wpt/service-workers/header-filtering.https-expected.txt:
+        * http/wpt/service-workers/header-filtering.https.html:
+
 2018-04-06  Youenn Fablet  <youenn@apple.com>
 
         Response headers should be filtered when sent from NetworkProcess to WebProcess
